# streamlit_mabibliotheque

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  home.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: secrets.demo.toml
data/: explo_codes_barre.sql  gtin_jeuxDeSociete.parquet  isbn_nudger_BD.parquet
db/: connection.py  crud.py  engine.py
models/: __init__.py  item.py  item_init.duckdb.sql  item_init.sqllite.sql  media_type.py
pages/: 0_📚_inventaire.py  1_✍_scan_code_barre.py  1_🔍_scan_code_barre.py  2_📝_ajout_item.py
services/: item_service.py
utils/: form_generator.py  item_form.py  render_item_form.py
