[project]
name = "streamlit-mabibliotheque"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb-engine>=0.17.0",
    "polars>=1.33.1",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "streamlit>=1.49.0",
    "streamlit-pydantic>=0.6.0",
]

[tool.ruff]
line-length = 200

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.4.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
