[project]
name = "streamlit-mabibliotheque"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "polars>=1.35.0",
    "sqlmodel>=0.0.27",
    "streamlit>=1.52.0",
]

[tool.ruff]
line-length = 200

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.4.0",
    "pytest>=7.0.0",
    "ruff>=0.14.4",
]
